@@ -454,19 +454,19 @@ static BOOL PLAYBELL = YES;
     return SHELL;
 }
 
-- (NSView *) display
+- (PTYTextView *) display
 {
     return (display);
 }
 
-- (void) setDisplay: (NSView *) aDisplay
+- (void) setDisplay: (PTYTextView *) aDisplay
 {
     [display release];
     if(aDisplay != nil)
     {
-	[aDisplay retain];
-	display = aDisplay;
-    }
+		[aDisplay retain];
+		display = aDisplay;
+	}
 }
 
 - (BOOL) blinkingCursor
@@ -652,7 +652,7 @@ static BOOL PLAYBELL = YES;
 		memset(screenFGColor+i,[TERMINAL foregroundColorCode],j);
 		memset(screenBGColor+i,[TERMINAL backgroundColorCode],j);
 		memset(dirty+i,1,j);
-        break;
+		break;
         
     case STRICT_ANSI_MODE:
 		[TERMINAL setStrictAnsiMode: ![TERMINAL strictAnsiMode]];
@@ -720,7 +720,7 @@ static BOOL PLAYBELL = YES;
 	}
 	
 	bufferWrapped = lastBufferLineIndex = 0;
-	[(PTYTextView *) display refresh];
+	[display refresh];
 }
 
 - (void) saveBuffer
@@ -863,15 +863,11 @@ static BOOL PLAYBELL = YES;
 			memcpy(bufferFGColor+lastBufferLineIndex*WIDTH, screenFGColor, WIDTH*sizeof(char));
 			memcpy(bufferBGColor+lastBufferLineIndex*WIDTH, screenBGColor, WIDTH*sizeof(char));
 			lastBufferLineIndex++;
-			if (bufferWrapped) {
-				[(PTYTextView *)display adjustSelection:-1];
-			}
 			if (lastBufferLineIndex>scrollbackLines) {
 				lastBufferLineIndex=0;
 				bufferWrapped=1;
 			}
 		}
-		else [(PTYTextView *)display adjustSelection:-1];
 		// move screen buffer one line up with its attributes
 		memmove(screenLines,screenLines+WIDTH,(HEIGHT-1)*WIDTH*sizeof(unichar));
 		memmove(screenFGColor,screenFGColor+WIDTH,(HEIGHT-1)*WIDTH*sizeof(char));
@@ -942,7 +938,6 @@ static BOOL PLAYBELL = YES;
 	memset(screenFGColor,DEFAULT_FG_COLOR_CODE,HEIGHT*WIDTH*sizeof(char));
 	memset(screenBGColor,DEFAULT_BG_COLOR_CODE,HEIGHT*WIDTH*sizeof(char));
 	memset(dirty,1,HEIGHT*WIDTH*sizeof(char));
-	[(PTYTextView *)display adjustSelection:0];  //clear the selection
 
 	CURSOR_X = CURSOR_Y = 0;
 
@@ -1446,7 +1441,7 @@ static BOOL PLAYBELL = YES;
 	for (i=0; i<WIDTH*HEIGHT; i++) {
 		if (dirty[i]) break;
 	}
-    if (i<WIDTH*HEIGHT) [(PTYTextView *)display refresh];
+    if (i<WIDTH*HEIGHT) [display refresh];
 }
 
 - (int) cursorX
@@ -1480,7 +1475,7 @@ static BOOL PLAYBELL = YES;
 
 - (void) updateScreen
 {
-    [(PTYTextView *)display refresh];
+    [display refresh];
 }
 
 - (unichar *)screenLines{ return screenLines; }
