@@ -1,3 +1,11 @@
+2004-03-03  fabian
+
+	* Rewrite the selection code. Faster and more consistent.
+	
+2004-03-02  fabian
+
+	* Fixed bug in copy&paste
+	
 2004-03-02  ujwal
 
 	* Initial pass at keybinding manager complete. Some more work left, 
